# tennis-scoring

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  FEATURE_IDEAS.md  README.md  deploy-native.sh  deploy.sh  docker-compose.traefik.yml  docker-compose.yml  import_wtb_to_db.py  pyproject.toml  requirements.txt  scrape_players_from_csv.py  scrape_wtb_by_id.py  scrape_wtb_full.py  show_clubs.py  show_scraped_data.py  start.sh  test_db.py  test_pagination.py  test_scrape.py  wtb_data_20260216_174541.json  wtb_players_20260217_093626.json
app/: __init__.py  auth.py  database.py  main.py  models.py  schemas.py  scoring.py  wtb_scraper.py
static/css/: style.css
templates/: admin.html  admin_login.html  archive.html  index.html  match.html  matchday.html
tests/: test_fixture_import.py
