[project]
name = "tennis-scoring"
version = "1.0.0"
description = "Real-time tennis scoring web application with TV-style scoreboard display"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.1",
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
]

[project.scripts]
tennis-scoring = "app.main:app"

[tool.uv]
dev-dependencies = []
